// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildKeySteps builds expected steps for login 1`] = `
Array [
  Object {
    "action": "type",
    "event": Object {
      "htmlSelector": "<div id=\\"root\\" qaw_innertext=\\"To log in, use tomsmith as the username, and SuperSecretPassword! as the password. Username Password Log in\\"><form qaw_innertext=\\"Username Password Log in\\"><input autocomplete=\\"off\\" id=\\"username\\" type=\\"text\\" value=\\"\\" qaw_labels=\\"Username\\" /></form></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "autocomplete": "off",
          "id": "username",
          "qaw_labels": "Username",
          "type": "text",
          "value": "",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583106436649,
      "value": "t",
    },
    "index": 0,
    "value": "tomsmith",
  },
  Object {
    "action": "press",
    "event": Object {
      "htmlSelector": "<div id=\\"root\\" qaw_innertext=\\"To log in, use tomsmith as the username, and SuperSecretPassword! as the password. Username Password Log in\\"><form qaw_innertext=\\"Username Password Log in\\"><input autocomplete=\\"off\\" id=\\"username\\" type=\\"text\\" value=\\"tomsmith\\" qaw_labels=\\"Username\\" /></form></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "autocomplete": "off",
          "id": "username",
          "qaw_labels": "Username",
          "type": "text",
          "value": "tomsmith",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583106437954,
      "value": "Tab",
    },
    "index": 1,
    "value": "Tab",
  },
  Object {
    "action": "type",
    "event": Object {
      "htmlSelector": "<div id=\\"root\\" qaw_innertext=\\"To log in, use tomsmith as the username, and SuperSecretPassword! as the password. Username Password Log in\\"><form qaw_innertext=\\"Username Password Log in\\"><input autocomplete=\\"off\\" id=\\"password\\" type=\\"password\\" value=\\"\\" qaw_labels=\\"Password\\" /></form></div>",
      "isTrusted": true,
      "name": "paste",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "autocomplete": "off",
          "id": "password",
          "qaw_labels": "Password",
          "type": "password",
          "value": "",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583106438791,
      "value": "SuperSecretPassword!",
    },
    "index": 2,
    "value": "SuperSecretPassword!",
  },
  Object {
    "action": "press",
    "event": Object {
      "htmlSelector": "<div id=\\"root\\" qaw_innertext=\\"To log in, use tomsmith as the username, and SuperSecretPassword! as the password. Username Password Log in\\"><form qaw_innertext=\\"Username Password Log in\\"><input autocomplete=\\"off\\" id=\\"password\\" type=\\"password\\" value=\\"SuperSecretPassword!\\" qaw_labels=\\"Password\\" /></form></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "autocomplete": "off",
          "id": "password",
          "qaw_labels": "Password",
          "type": "password",
          "value": "SuperSecretPassword!",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583106439265,
      "value": "Enter",
    },
    "index": 3,
    "value": "Enter",
  },
]
`;

exports[`buildKeySteps builds expected steps for modifier keys 1`] = `
Array [
  Object {
    "action": "type",
    "event": Object {
      "cssSelector": "[data-qa='html-text-input']",
      "htmlSelector": "<div style=\\"display: flex; flex-wrap: wrap;\\" qaw_innertext=\\"Native HTML Material UI Text input Filled text input Password input Number input Textarea\\"><div class=\\"container\\" qaw_innertext=\\"Native HTML\\"><input data-qa=\\"html-text-input\\" placeholder=\\"Text input\\" type=\\"text\\" /></div></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "data-qa": "html-text-input",
          "placeholder": "Text input",
          "type": "text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583704460692,
      "value": "!",
    },
    "index": 0,
    "value": "!@#$%^",
  },
  Object {
    "action": "press",
    "event": Object {
      "cssSelector": "[data-qa='html-text-input']",
      "htmlSelector": "<div style=\\"display: flex; flex-wrap: wrap;\\" qaw_innertext=\\"Native HTML Material UI Text input Filled text input Password input Number input Textarea\\"><div class=\\"container\\" qaw_innertext=\\"Native HTML\\"><input data-qa=\\"html-text-input\\" placeholder=\\"Text input\\" type=\\"text\\" /></div></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "data-qa": "html-text-input",
          "placeholder": "Text input",
          "type": "text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583704471119,
      "value": "ArrowLeft",
    },
    "index": 1,
    "value": "ArrowLeft",
  },
  Object {
    "action": "press",
    "event": Object {
      "cssSelector": "[data-qa='html-text-input']",
      "htmlSelector": "<div style=\\"display: flex; flex-wrap: wrap;\\" qaw_innertext=\\"Native HTML Material UI Text input Filled text input Password input Number input Textarea\\"><div class=\\"container\\" qaw_innertext=\\"Native HTML\\"><input data-qa=\\"html-text-input\\" placeholder=\\"Text input\\" type=\\"text\\" /></div></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "data-qa": "html-text-input",
          "placeholder": "Text input",
          "type": "text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583704471567,
      "value": "ArrowLeft",
    },
    "index": 2,
    "value": "ArrowLeft",
  },
  Object {
    "action": "press",
    "event": Object {
      "cssSelector": "[data-qa='html-text-input']",
      "htmlSelector": "<div style=\\"display: flex; flex-wrap: wrap;\\" qaw_innertext=\\"Native HTML Material UI Text input Filled text input Password input Number input Textarea\\"><div class=\\"container\\" qaw_innertext=\\"Native HTML\\"><input data-qa=\\"html-text-input\\" placeholder=\\"Text input\\" type=\\"text\\" /></div></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "data-qa": "html-text-input",
          "placeholder": "Text input",
          "type": "text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583704471994,
      "value": "ArrowLeft",
    },
    "index": 3,
    "value": "ArrowLeft",
  },
  Object {
    "action": "press",
    "event": Object {
      "cssSelector": "[data-qa='html-text-input']",
      "htmlSelector": "<div style=\\"display: flex; flex-wrap: wrap;\\" qaw_innertext=\\"Native HTML Material UI Text input Filled text input Password input Number input Textarea\\"><div class=\\"container\\" qaw_innertext=\\"Native HTML\\"><input data-qa=\\"html-text-input\\" placeholder=\\"Text input\\" type=\\"text\\" /></div></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "data-qa": "html-text-input",
          "placeholder": "Text input",
          "type": "text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583704472330,
      "value": "ArrowLeft",
    },
    "index": 4,
    "value": "ArrowLeft",
  },
  Object {
    "action": "press",
    "event": Object {
      "cssSelector": "[data-qa='html-text-input']",
      "htmlSelector": "<div style=\\"display: flex; flex-wrap: wrap;\\" qaw_innertext=\\"Native HTML Material UI Text input Filled text input Password input Number input Textarea\\"><div class=\\"container\\" qaw_innertext=\\"Native HTML\\"><input data-qa=\\"html-text-input\\" placeholder=\\"Text input\\" type=\\"text\\" /></div></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "data-qa": "html-text-input",
          "placeholder": "Text input",
          "type": "text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583704472697,
      "value": "ArrowLeft",
    },
    "index": 5,
    "value": "ArrowLeft",
  },
  Object {
    "action": "press",
    "event": Object {
      "cssSelector": "[data-qa='html-text-input']",
      "htmlSelector": "<div style=\\"display: flex; flex-wrap: wrap;\\" qaw_innertext=\\"Native HTML Material UI Text input Filled text input Password input Number input Textarea\\"><div class=\\"container\\" qaw_innertext=\\"Native HTML\\"><input data-qa=\\"html-text-input\\" placeholder=\\"Text input\\" type=\\"text\\" /></div></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "data-qa": "html-text-input",
          "placeholder": "Text input",
          "type": "text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583704473147,
      "value": "ArrowLeft",
    },
    "index": 6,
    "value": "ArrowLeft",
  },
  Object {
    "action": "type",
    "event": Object {
      "cssSelector": "[data-qa='html-text-input']",
      "htmlSelector": "<div style=\\"display: flex; flex-wrap: wrap;\\" qaw_innertext=\\"Native HTML Material UI Text input Filled text input Password input Number input Textarea\\"><div class=\\"container\\" qaw_innertext=\\"Native HTML\\"><input data-qa=\\"html-text-input\\" placeholder=\\"Text input\\" type=\\"text\\" /></div></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "data-qa": "html-text-input",
          "placeholder": "Text input",
          "type": "text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583704478537,
      "value": "~",
    },
    "index": 7,
    "value": "~™£¢",
  },
]
`;

exports[`buildKeySteps builds expected steps for selectall 1`] = `
Array [
  Object {
    "action": "fill",
    "event": Object {
      "cssSelector": "[data-qa='html-text-input-filled']",
      "htmlSelector": "<div style=\\"display: flex; flex-wrap: wrap;\\" qaw_innertext=\\"Native HTML Material UI Text input Filled text input Password input Number input Textarea\\"><div class=\\"container\\" qaw_innertext=\\"Native HTML\\"><input data-qa=\\"html-text-input-filled\\" placeholder=\\"Filled text input\\" type=\\"text\\" value=\\"initial text\\" /></div></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "data-qa": "html-text-input-filled",
          "placeholder": "Filled text input",
          "type": "text",
          "value": "initial text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583107777030,
      "value": "h",
    },
    "index": 0,
    "value": "hotkeys",
  },
  Object {
    "action": "fill",
    "event": Object {
      "cssSelector": "[data-qa='html-text-input-filled']",
      "htmlSelector": "<div style=\\"display: flex; flex-wrap: wrap;\\" qaw_innertext=\\"Native HTML Material UI Text input Filled text input Password input Number input Textarea\\"><div class=\\"container\\" qaw_innertext=\\"Native HTML\\"><input data-qa=\\"html-text-input-filled\\" placeholder=\\"Filled text input\\" type=\\"text\\" value=\\"initial text\\" /></div></div>",
      "isTrusted": true,
      "name": "keydown",
      "page": 0,
      "target": Object {
        "attrs": Object {
          "data-qa": "html-text-input-filled",
          "placeholder": "Filled text input",
          "type": "text",
          "value": "initial text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
      "time": 1583107783358,
      "value": "c",
    },
    "index": 1,
    "value": "clickselectall",
  },
]
`;
